Ninja: metadata clean-on-regenerate broken on Windows
The change in !3316 (merged) for #15830 (closed) does not work on Windows with Ninja 1.10 when running ninja
re-runs CMake internally. The outer ninja holds the log files open so the ninja -t *
tools fail with:
ninja: error: failed recompaction: Permission denied
Edited by Brad King